# AgenticPMO

./: .gitattributes  .gitignore  README.md  RELEASE-NOTES.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: executor.py  governor.py  orchestrator.py
api/: main.py
artifacts/: a05_governance_framework_for_aero_project.md  a05_sponsor_is_alice_smith.md  a05_with.md
docs/: agent_integration.md  agents_and_skills.md  api_reference.md  architecture.md  deployment.md  executive_guide.md  extending_skills.md  testing_and_qa.md
graph/: state.py  workflow.py
schemas/: models.py
tests/: test_graph.py
tools/: pmo_tools.py
